--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -4,10 +4,10 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"/>
-    <item
-        android:id="@+id/nav_library"
-        android:icon="@drawable/ic_baseline_photo_library_24"
-        android:title="Library"/>
+<!--    <item-->
+<!--        android:id="@+id/nav_library"-->
+<!--        android:icon="@drawable/ic_baseline_photo_library_24"-->
+<!--        android:title="Library"/>-->
     <item
         android:id="@+id/nav_help"
         android:icon="@drawable/ic_baseline_help_24"
