--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -1,6 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.4"
+        android:scaleX="3"
+        android:scaleY="1.3"
+        android:src="@mipmap/picturesetting" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/radius_fragment"
+        android:layout_weight="0.6">
+
+        <ImageView
+            android:id="@+id/img1"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/border_setting_button"
+            android:src="@drawable/share" />
+
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/img1"
+            android:background="@drawable/two_slide_border"
+            android:paddingTop="10dp"
+            android:text="Nói nhỏ với bạn bè"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="19sp" />
+
+        <ImageView
+            android:id="@+id/img2"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/img1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/border_setting_button"
+            android:src="@drawable/star"
+
+            />
+
+        <TextView
+            android:id="@+id/txt2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt1"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/img2"
+            android:background="@drawable/two_slide_border"
+            android:paddingTop="10dp"
+            android:text="Đánh giá nhận xet"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="19sp" />
+
+        <ImageView
+            android:id="@+id/img3"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/img2"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/border_setting_button"
+            android:src="@drawable/chat"
+
+            />
+
+        <TextView
+            android:id="@+id/txt3"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt2"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/img3"
+            android:background="@drawable/two_slide_border"
+            android:paddingTop="10dp"
+            android:text="Gửi phản hồi"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="19sp" />
+
+        <ImageView
+            android:id="@+id/img4"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/img3"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/border_setting_button"
+            android:src="@drawable/lock"
+
+            />
+
+        <TextView
+            android:id="@+id/txt4"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt3"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/img3"
+            android:background="@drawable/two_slide_border"
+            android:paddingTop="10dp"
+            android:text="Chính sách và quyền riêng tư"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="19sp" />
+
+        <ImageView
+            android:id="@+id/img5"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/img4"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/border_setting_button"
+            android:src="@drawable/quest"
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt4"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/img3"
+            android:background="@drawable/two_slide_border"
+            android:paddingTop="10dp"
+            android:text="Câu hỏi thường gặp"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="19sp" />
+    </RelativeLayout>
+</LinearLayout>
